@@ -1,3 +1,7 @@
+2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
+
+	* g++.dg/tree-ssa/sra-1.C: New.
+
 2007-02-10  Tobias Schlueter  <tobi@gcc.gnu.org>
 
 	PR fortran/30478
