@@ -1,5 +1,13 @@
 2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
 
+	* tree-sra.c (instantiate_missing_elements): Canonicalize
+	bit-field types.
+	(sra_build_assignment): New.
+	(generate_copy_inout, generate_element_copy,
+	generate_element_zero, generate_one_element_init): Use it.
+
+2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
+
 	PR debug/30189
 	* dwarf2out.c (modified_type_die): Follow DECL_ORIGINAL_TYPE
 	even if cv-qualification is the same.
